# elderly_care

./: .coveragerc  .deepsource.toml  .gitconfig  .gitignore  CLAUDE.md  PLAYWRIGHT_API_TESTS.md  README.md  alembic.ini  docker-compose.yml  lembretes_comando.txt  mcp-config.json  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  run-api-tests.js
.claude/agents/: agile-po-scrum-master.md  python-backend-engineer.md  qa-api-automation-engineer.md  tech-lead-architect.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26a6a3ab9136_alteracao_na_tabela_de_relacionamento_.py  3f6ea21ac896_initial_migration.py  670f191eddd9_fixed_rename_field.py  76dc4d94345d_versão_base.py  831a77552aa2_mensagem.py  98cd94a94750_inclusao_coluna_receipt_type_em_users.py  c310f66bd748_correção_coluna_receipt_type.py  c751777416e9_fixed_rename_field_again.py  mr662ksddt4s_add_notification_window_fields.py
backendeldery/: Dockerfile  __init__.py  config.py  create_tables.py  crud.py  crud_old.py  database.py  database_nosql.py  init.sql  main.py  models.py  process_audit_logs.py  schemas.py  setup_mongo.py  start.sh  utils.py
backendeldery/crud/: __init__.py  attendant.py  base.py  crud_base.py  crud_user.py  function.py  team.py  users.py
backendeldery/routers/: attendant.py  teams.py  users.py
backendeldery/services/: attendantAssociationService.py  attendantUpdateService.py  attendants.py  team.py  users.py
backendeldery/tests/: test_attendant_Assocation_Service.py  test_attendant_Update_Service.py  test_attendant_service.py  test_attendant_validator.py  test_cpf_validator.py  test_crud_assisted.py  test_crud_attendant.py  test_crud_base.py  test_crud_contact.py  test_crud_function.py  test_crud_specialized_user.py  test_crud_subscriber.py  test_crud_team.py  test_crud_user.py  test_crud_users.py  test_main.py  test_notification_window_endpoints.py  test_notification_window_migration.py  test_schema.py  test_team_service.py  test_user_service.py  test_user_validator.py  test_utils.py
backendeldery/tests/api/: README.md  contact-notification-window-api.spec.js  notification-window-api.spec.js  notification-window-contract.spec.js  patch-endpoints-api.spec.js  test-helpers.js
backendeldery/validators/: attendant_validator.py  cpf_validator.py  user_validator.py
modelos/: classes.txt
scripts/: commit.sh
test-results/: .last-run.json
