[tool.poetry]
name = "backendeldery"
version = "0.1.0"
description = ""
authors = ["andrenunes <andremarcelonunes@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
starlette = ">=0.40.0,<0.42.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
pymongo = ">=4.9,<4.10"
motor = "^3.6.0"
pydantic-settings = "^2.7.0"
passlib = "^1.7.4"
bcrypt = "==3.2.0"
pydantic = {extras = ["email"], version = "^2.10.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
